Prepare for deployment: configurable CORS, API URL, and prod profile